# ContextAgent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: context_agent.yaml  openjiuwen.yaml
context_agent/: __init__.py
context_agent/adapters/: context_engine_adapter.py  external_memory_adapter.py  llm_adapter.py  ltm_adapter.py  openjiuwen_db_kv_store.py  openjiuwen_pgvector_store.py  retriever_adapter.py
context_agent/api/: auth.py  http_handler.py  openclaw_handler.py  openclaw_schemas.py  router.py  schemas.py
context_agent/config/: defaults.py  migration.py  openjiuwen.py  settings.py
context_agent/models/: context.py  metrics.py  note.py  policy.py  ref.py  version.py
context_agent/orchestration/: compression_router.py  context_aggregator.py  strategy_scheduler.py  sub_agent_manager.py
context_agent/strategies/: base.py  compaction_strategy.py  long_session_strategy.py  qa_strategy.py  realtime_strategy.py  registry.py  task_strategy.py
context_agent/utils/: errors.py  logging.py  tracing.py
docs/: agent-integration-guide.md  architecture-design.md  benchmark-evaluation-guide.md  debugging-guide.md  memory-optimization-roadmap.md  openclaw-integration.md  requirements-analysis.md
examples/: README.md  basic_recall.py  business_agent.py  compression_demo.py  openjiuwen.gaussdb.yaml.example  openjiuwen.pgvector.yaml.example  openjiuwen.qdrant.yaml.example  sub_agent_delegation.py  tool_governance.py
plugins/context-agent/: README.md  openclaw.plugin.json  package.json  tsconfig.json
plugins/openclaw-memory-plugin/: README.md  (+4 more)
scripts/: debug.py  debug.sh  env-bootstrap.sh  fix_upgrade.py  health-check.sh  inspect_logging.py  install.sh  patch_upgrade_pip.py  restart-all.sh  restart-contextagent.sh  restart-pgvector.sh  service-common.sh  setup-openclaw.sh  setup-vector-backend.sh  start-all.sh  stop-all.sh  test_http_handler_logic.py  test_import_order.py  test_logging_fix.py  test_logging_setup.py  upgrade.sh
tests/: README.md
(+67 files in other folders)
